# xbee

esp32-xbee-master/: .clangd  .project  clean.bat  clean.sh  partitions.csv  partitions.csv.bak  sdkconfig  sdkconfig.old
esp32-xbee-master/main/: CMakeLists.txt  CMakeLists.txt.bak  config.c  core_dump.c  idf_component.yml  main.c  status_led.c  web_server.c  wifi.c
esp32-xbee-master/main/include/: config.h  log.h  status_led.h  tasks.h  uart.h  util.h  web_server.h  wifi.h
esp32-xbee-master/main/include/interface/: ntrip.h  socket_client.h  socket_server.h
esp32-xbee-master/main/include/protocol/: nmea.h
esp32-xbee-master/main/interface/: ntrip_caster.c  ntrip_client.c  ntrip_server.c  socket_server.c
